Kelsey Development Sandbox/src/objects/Raw_Data_Link__c.object
<CustomObject>
    <fields>
        <fullName>Age_of_Entry__c</fullName>
        <formula>BackgroundInfoB__r.Client__r.AGE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Entry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDOACBCLO__c</fullName>
        <label>BDOACBCLO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOACBCLY__c</fullName>
        <label>BDOACBCLY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOAPSI__c</fullName>
        <label>BDOAPSI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOAPTSD__c</fullName>
        <label>BDOAPTSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDQOP__c</fullName>
        <label>BDOASDQOP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDQOS__c</fullName>
        <label>BDOASDQOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDQYP__c</fullName>
        <label>BDOASDQYP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOATSCCA__c</fullName>
        <label>BDOATSCCA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOATSCYC__c</fullName>
        <label>BDOATSCYC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>BackgroundInfoB__r.BDOV__c</formula>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIDENT__c</fullName>
        <formula>TEXT(BackgroundInfoB__r.BIDENT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BIDENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMILFAMILY__c</fullName>
        <formula>TEXT( BackgroundInfoB__r.BMILFAMILY__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMILFAMILY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMILSELF__c</fullName>
        <formula>TEXT( BackgroundInfoB__r.BMILSELF__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMILSELF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackgroundInfoB__c</fullName>
        <label>DS Background Family Info B</label>
        <referenceTo>DS_Background_Family_Info_B__c</referenceTo>
        <relationshipLabel>Raw Data Links</relationshipLabel>
        <relationshipName>Raw_Data_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>BackgroundInfoB__r.Client__r.CURRENT_AGE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateEnd__c</fullName>
        <label>DateEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateStart__c</fullName>
        <label>DateStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETHNIC__c</fullName>
        <formula>TEXT( BackgroundInfoB__r.ETHNIC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETHNIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FETSTAT__c</fullName>
        <label>FETSTAT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMSTAT__c</fullName>
        <label>FMSTAT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FUTYPE__c</fullName>
        <label>FUTYPE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAKNTV__c</fullName>
        <formula>BackgroundInfoB__r.RAKNTV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAKNTV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RASIANIN__c</fullName>
        <formula>BackgroundInfoB__r.RASIANIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RASIANIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBLACK__c</fullName>
        <formula>BackgroundInfoB__r.RBLACK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RBLACK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCHINESE__c</fullName>
        <formula>BackgroundInfoB__r.RCHINESE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCHINESE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFILIPINO__c</fullName>
        <formula>BackgroundInfoB__r.RFILIPINO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFILIPINO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RGUAM__c</fullName>
        <formula>BackgroundInfoB__r.RGUAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RGUAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RHAWAN__c</fullName>
        <formula>BackgroundInfoB__r.RHAWAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RHAWAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RINDIAN__c</fullName>
        <formula>BackgroundInfoB__r.RINDIAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RINDIAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RJAPANESE__c</fullName>
        <formula>BackgroundInfoB__r.RJAPANESE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RJAPANESE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RKOREAN__c</fullName>
        <formula>BackgroundInfoB__r.RKOREAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RKOREAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROASIAN__c</fullName>
        <formula>BackgroundInfoB__r.ROASIAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROASIAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROPI__c</fullName>
        <formula>BackgroundInfoB__r.ROPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RREF__c</fullName>
        <formula>BackgroundInfoB__r.RREF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RREF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSAMOA__c</fullName>
        <formula>BackgroundInfoB__r.RSAMOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSAMOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUNK__c</fullName>
        <formula>BackgroundInfoB__r.RUNK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RUNK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RVIETNAMESE__c</fullName>
        <formula>BackgroundInfoB__r.RVIETNAMESE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RVIETNAMESE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RWHITE__c</fullName>
        <formula>BackgroundInfoB__r.RWHITE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RWHITE</label>
        <type>Checkbox</type>
    </fields>
    <label>Raw Data Link</label>
    <nameField>
        <label>Raw Data Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raw Data Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>